2004-01-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/sequential-iterator.cc (run_always): implement run_always().

	* input/mutopia/F.Schubert/standchen.ly: use newaddlyrics. 

	* lily/event.cc (to_relative_octave): add octave-check.

	* Documentation/user/refman.itely (Line breaking): add noBreak.

	* scm/new-markup.scm (normalsize-markup): add function.
	(sans-markup): new function.

	* lily/beam-engraver.cc (valid_end_point): opps, beam-stop-events
	come earlier nowadays.  This fixes beams on grace notes.
	
	* scm/music-functions.scm (direction-polyphonic-grobs): new
	variable, share between override and revert. This fixes script
	directions in polyphonic sections. (backportme)

2004-01-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/text-spanner.cc (brew_molecule): don't do shorten-pair for
	breakpoints.

	* lily/break-align-interface.cc: add doco

	* Documentation/user/refman.itely (Rehearsal marks): add index marks. 

2004-01-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.1.9

	* scm/document-markup.scm (markup-doc-node): add note about naming.

	* scm/new-markup.scm (left-align-markup): bugfix. 

	* Documentation/user/refman.itely (Ottava brackets): more doco for
	ottava.

	* lily/side-position-interface.cc (out_of_staff): also do
	out_of_staff() correctly for d == DOWN.

	* lily/text-spanner.cc (brew_molecule): only put vertical line and
	horizontal line if they move to the right.
	
	* scm/define-grobs.scm (all-grob-descriptions): set
	text-repeat-if-broken for ottava spanner

	* lily/text-spanner.cc (brew_molecule): text-repeat-if-broken
	property.

	* mf/feta18.mf: design size is 18 not 22.5

	* lily/new-lyric-combine-music-iterator.cc (process): new file.
	Add a single LyricsVoice to a melody. Melismata may be set
	individually.

	* input/regression/lyric-combine-new.ly: new file. Demo \newaddlyrics.

	* lily/dot-column.cc: add stdio.h

2004-01-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>
