@@ -1,5 +1,7 @@
 2004-01-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/system.cc (typeset_grob): warn if adding twice.
+
 	* lily/sequential-iterator.cc (run_always): implement run_always().
 
 	* input/mutopia/F.Schubert/standchen.ly: use newaddlyrics. 
